          FIXME - All accounts now selected by default, avoids
          confusing error message. Error message also clarified.
          Fixed "Totals" option so that it works.

        * src/report/standard-reports/balance-sheet.scm:
        * src/report/standard-reports/equity-statement.scm:
        * src/report/standard-reports/trial-balance.scm:
        Updated comments

	* Fixes #144268

        * src/report/standard-reports/income-statement.scm:
          src/report/standard-reports/pnl.scm:
          src/report/standard-reports/standard-reports.scm:
          src/report/standard-reports/Makefile.am:
          Rewrote pnl.scm, renamed it to income-statement.scm.
          Can now create a meaningful statement post-closing.

        * src/report/report-system/html-acct-table.scm:
          Updated to include ability to "see through" closing
          and/or adjusting entries.

	* Fixes #105330.

2004-07-13  David Montenegro  <sunrise2000@comcast.net>

        * src/report/standard-reports/trial-balance.scm:
        * src/report/standard-reports/standard-reports.scm:
        * src/report/standard-reports/Makefile.am
          added Trial Balance/Work Sheet report

        * src/report/standard-reports/balance-sheet.scm:
          added drop-down choices missing in previous version
          added support for adjusting/closing entries

        * src/report/standard-reports/equity-statement.scm:
          added support for adjusting/closing entries
          fixed "For Period Covering" label
          fixed handling of unrealized gains
          investment/draw discrimination based on shares sign
          omit unrealized gains when zero

        * src/report/report-system/html-acct-table.scm:
        * src/report/report-system/html-table.scm:
          null reference bug fixes

        * src/report/report-system/report-utilities.scm:
          added utility functions for accessing splits
          and creating double-column balance HTML