@@ -15,7 +15,6 @@
         * src/report/standard-reports/equity-statement.scm:
         * src/report/standard-reports/trial-balance.scm:
         Updated comments
-
 	* Fixes #144268
 
         * src/report/standard-reports/income-statement.scm:
@@ -28,8 +27,14 @@
         * src/report/report-system/html-acct-table.scm:
           Updated to include ability to "see through" closing
           and/or adjusting entries.
-
 	* Fixes #105330.
+
+        * src/report/standard-reports/general-journal.scm:
+          src/report/standard-reports/standard-reports.scm:
+          src/report/standard-reports/Makefile.am:
+          Added General Journal report, a Register Report
+          with a pre-set set of options.
+	* Bug #109738.
 
 2004-07-13  David Montenegro  <sunrise2000@comcast.net>
 
